# tapLock

./: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE
R/: entra_id.R  extendr-wrappers.R  utils.R
man/: parse_cookies.Rd
src/: Makevars  Makevars.win
src/rust/: Cargo.toml
src/rust/src/: lib.rs
