[package]
name = 'tapLock'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'tapLock'

[dependencies]
cookie = "0.18.1"
extendr-api = '*'
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["cookies", "json"] }
